# FreedroidClassic

./: .gitignore  .mailmap  00boot  AUTHORS  AndroidAppSettings.cfg  ChangeLog  FILES  HELP_WANTED  IDEAS  INSTALL  Makefile.am  NEWS  README  TASK_CHART  TODO  TROUBLESHOOTING  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure.ac  debugconf.sh  freedroid.6  freedroidRPG.6  render_and_symlink_images.sh  unix2dos.el  win32-config  win32-config.sh  win32-debugconfig.sh
graphics/: Makefile.am  grid_tile.offset  level_editor_map_label_indicator.offset  level_editor_norand_waypoint_cursor.offset  level_editor_waypoint_cursor.offset  level_editor_waypoint_dot.offset  mouse_move_cursor_0.offset  mouse_move_cursor_1.offset  tux_icon_on_automap.offset
graphics/blasts/: iso_blast_bullet_0001.offset  iso_blast_bullet_0002.offset  iso_blast_bullet_0003.offset  iso_blast_bullet_0004.offset  iso_blast_bullet_0005.offset  iso_blast_bullet_0006.offset  iso_blast_bullet_0007.offset  iso_blast_bullet_0008.offset  iso_blast_bullet_0009.offset  iso_blast_bullet_0010.offset  iso_blast_bullet_0011.offset  iso_blast_bullet_0012.offset  iso_blast_bullet_0013.offset  iso_blast_bullet_0014.offset  iso_blast_bullet_0015.offset  iso_blast_bullet_0016.offset  iso_blast_bullet_0017.offset  iso_blast_bullet_0018.offset  iso_blast_bullet_0019.offset  iso_blast_bullet_0020.offset  iso_blast_bullet_0021.offset  iso_blast_bullet_0022.offset  iso_blast_bullet_0023.offset  iso_blast_bullet_0024.offset  iso_blast_droid_0002.offset  iso_blast_droid_0003.offset  iso_blast_droid_0005.offset  iso_blast_droid_0006.offset  iso_blast_droid_0008.offset  iso_blast_droid_0009.offset  iso_blast_droid_0012.offset  iso_blast_droid_0014.offset  iso_blast_droid_0015.offset  iso_blast_droid_0017.offset  iso_blast_droid_0018.offset  iso_blast_droid_0019.offset  iso_blast_droid_0021.offset  iso_blast_droid_0022.offset  iso_blast_droid_0023.offset  iso_blast_exterminator_0001.offset  (+8 more)
graphics/bullets/: Makefile.am  iso_bullet_exterminator_00_0001.offset  iso_bullet_exterminator_01_0001.offset  iso_bullet_exterminator_02_0001.offset  iso_bullet_exterminator_03_0001.offset  iso_bullet_exterminator_04_0001.offset  iso_bullet_exterminator_05_0001.offset  iso_bullet_exterminator_06_0001.offset  iso_bullet_exterminator_07_0001.offset  iso_bullet_exterminator_08_0001.offset  iso_bullet_exterminator_09_0001.offset  iso_bullet_exterminator_10_0001.offset  iso_bullet_exterminator_11_0001.offset  iso_bullet_exterminator_12_0001.offset  iso_bullet_exterminator_13_0001.offset  iso_bullet_exterminator_14_0001.offset  iso_bullet_exterminator_15_0001.offset  iso_bullet_half_blue_00_0001.offset  iso_bullet_half_blue_01_0001.offset  iso_bullet_half_blue_02_0001.offset  iso_bullet_half_blue_03_0001.offset  iso_bullet_half_blue_04_0001.offset  iso_bullet_half_blue_05_0001.offset  iso_bullet_half_blue_06_0001.offset  iso_bullet_half_blue_07_0001.offset  iso_bullet_half_blue_08_0001.offset  iso_bullet_half_blue_09_0001.offset  iso_bullet_half_blue_10_0001.offset  iso_bullet_half_blue_11_0001.offset  iso_bullet_half_blue_12_0001.offset  iso_bullet_half_blue_13_0001.offset  iso_bullet_half_blue_14_0001.offset  iso_bullet_half_blue_15_0001.offset  iso_bullet_half_green_00_0001.offset  iso_bullet_half_green_01_0001.offset  iso_bullet_half_green_02_0001.offset  iso_bullet_half_green_03_0001.offset  iso_bullet_half_green_04_0001.offset  iso_bullet_half_green_05_0001.offset  iso_bullet_half_green_06_0001.offset  (+170 more)
graphics/classic_theme/: Makefile.am
graphics/default_theme/: Makefile.am  config.theme
graphics/droids/: default_dead_body_00_0001.offset  default_dead_body_02_0001.offset  default_dead_body_04_0001.offset  default_dead_body_06_0001.offset  default_dead_body_08_0001.offset  default_dead_body_10_0001.offset  default_dead_body_12_0001.offset  default_dead_body_14_0001.offset  default_dead_human_00_0001.offset
graphics/items/: Makefile.am
graphics/lanzz_theme/: Makefile.am  config.theme
graphics/light_radius_chunks/: iso_light_radius_darkness_0000.offset  iso_light_radius_darkness_0001.offset  iso_light_radius_darkness_0002.offset  iso_light_radius_darkness_0003.offset  iso_light_radius_darkness_0004.offset  iso_light_radius_darkness_0005.offset  iso_light_radius_darkness_0006.offset  iso_light_radius_darkness_0007.offset  (+13 more)
map/: Asteroid.maps  CleanPrivateGoodsStorageCellar.droids  CleanPrivateGoodsStorageCellar.mission  CleanPrivateQuartersDeck.droids  CleanPrivateQuartersDeck.mission  EndOfGame.title  EventsAndEventTriggers  Freedroid.dialogues  Invading_Asteroid_Command_Central.droids  Invading_Asteroid_Command_Central.elevators  Invading_Asteroid_Command_Central.mission  Makefile.am  Paradroid.droids  Paradroid.elevators  Paradroid.maps  Paradroid.mission  QuestList  RestabilizeReactorPlant.droids  RestabilizeReactorPlant.mission  ReturnOfTux.droids  ReturnOfTux.mission  StartOfGame.title  TakeoverInstructions.title  The_Outbreak.droids  The_Outbreak.elevators  The_Outbreak.mission  classical_paradroid_mission.mission  freedroid.bullet_archetypes  freedroid.droid_archetypes  freedroid.item_archetypes  freedroid.prefix_archetypes  freedroid.program_archetypes  freedroid.ruleset  level_editor_help.title  levels.col.original  new_mission_1.mission  new_mission_2.mission  new_ship_1.crew  new_ship_1.droids  new_ship_1.maps  (+10 more)
sound/: A_City_at_Night.mod  Agony-Highlands2.mod  Beachhead_2.mod  ELYSIUM.MOD  Intro-Music.mod  Makefile.am  android-commando_hiscore.mod  botchat  dreamfish-green_beret.mod  dreamfish-uridium2_loader.mod  starpaws.mod
sound/music/: ALFA.MOD  (+22 more)
src/: BFont.c  BFont.h  DialogEditor.c  DialogEditor.h  ItemEditor.c  ItemEditor.h  Makefile  Makefile.am  ReplaceIt  ReplaceIt.awk  SDL_rotozoom.c  SDL_rotozoom.h  TAGS  assign_license_string.h  automap.c  blocks.c  bullet.c  character.c  chat.c  colodefs.h  defs.h  dialed.py  enemy.c  fd_memory.c  file_utilities.c  fm_hrd.c  fm_hrd.h  freedroid.6  freedroid.rc  freedroidRPG.6  getopt.c  global.h  graphics.c  highscore.c  hud.c  influ.c  init.c  input.c  itemdefs.h  items.c  (+49 more)
(+417 files in other folders)
