SUBDIRS = classic_theme lanzz_theme para90_theme

graphicsdir = $(pkgdatadir)/graphics

graphics_DATA = 001.png 999.png \
	001.jpg 123.jpg 139.jpg 247.jpg 249.jpg 296.jpg 302.jpg 329.jpg 420.jpg 476.jpg 493.jpg \
	516.jpg 571.jpg 598.jpg 614.jpg 615.jpg 629.jpg 711.jpg 742.jpg 751.jpg 821.jpg 834.jpg \
	883.jpg 999.jpg \
	arrow_down.png 	arrow_left.png arrow_right.png arrow_up.png \
	Ashes.png banner.png console_bg1.jpg console_bg2.jpg console_fg.png \
	credits.jpg font05_green.png font05.png font05_red.png parafont.png \
	progress_filler.png progress_meter.png takeover_bg.jpg title.jpg transfer.jpg \
	paraicon_48x48.png paraicon.bmp parafontold.png

EXTRA_DIST = $(graphics_DATA)
