mapdir = $(pkgdatadir)/map

map_DATA = game.dat \
	   classical_paradroid_mission.mission \
	   ship_1.droids ship_1.elevators ship_1.maps \
	   new_mission_1.mission new_ship_1.droids new_ship_1.elevators new_ship_1.maps \
	   new_mission_2.mission new_ship_2.droids new_ship_2.elevators new_ship_2.maps 

EXTRA_DIST = $(map_DATA)
