sounddir = $(pkgdatadir)/sound

sound_DATA = Alert.wav AnarchyMenu1.mod android-commando_hiscore.mod Blast_Sound_0.wav Collision_Sound_0.wav Countdown_Sound.wav\
	Cry_Sound_0.wav dreamfish-green_beret.mod dreamfish-sanxion.mod dreamfish-uridium2_loader.mod EndCountdown_Sound.wav \
	EnterElevator_Sound_0.wav Fire_Bullet_Exterminator_Sound_0.wav Fire_Bullet_Flash_Sound_0.wav Fire_Bullet_Laser_Rifle_Sound.wav \
	Fire_Bullet_Military_Sound_0.wav Fire_Bullet_Pulse_Sound_0.wav Fire_Bullet_Single_Pulse_Sound_0.wav Got_Hit_Sound_0.wav \
	GotIntoBlast_Sound_0.wav InfluExplosion.wav kollaps-tron.mod LeaveElevator_Sound_0.wav Menu_Item_Selected_Sound_0.wav \
	MoveElevator_Sound_0.wav Move_Menu_Position_Sound_0.wav Paradroid.ogg Refresh_Sound_0.wav Screenshot.wav starpaws.mod \
	Takeover_Game_Deadlock_Sound_0.wav Takeover_Game_Lost_Sound_0.wav Takeover_Game_Start_Sound_0.wav Takeover_Game_Won_Sound_0.wav\
	TakeoverSetCapsule_Sound_0.wav Takeover_Sound_0.wav The_Last_V8.mod ThouArtDefeated_Sound_0.wav WhiteNoise.wav

EXTRA_DIST = $(sound_DATA)
