sounddir = $(pkgdatadir)/sound

music = \
	AnarchyMenu1.mod \
	android-commando_hiscore.mod \
	dreamfish-green_beret.mod \
	dreamfish-sanxion.mod \
	dreamfish-uridium2_loader.mod \
	kollaps-tron.mod \
	starpaws.mod \
	The_Last_V8.mod

sounds = \
	Alert.wav \
	Blast_Sound_0.wav \
	Collision_Neutral.wav \
	Collision_GotDamaged.wav \
	Collision_DamagedEnemy.wav \
	Countdown_Sound.wav \
	Cry_Sound_0.wav \
	EndCountdown_Sound.wav \
	EnterElevator_Sound_0.wav \
	Fire_Bullet_Exterminator_Sound_0.wav \
	Fire_Bullet_Flash_Sound_0.wav \
	Fire_Bullet_Laser_Rifle_Sound.wav \
	Fire_Bullet_Military_Sound_0.wav \
	Fire_Bullet_Pulse_Sound_0.wav \
	Fire_Bullet_Single_Pulse_Sound_0.wav \
	Got_Hit_Sound_0.wav \
	GotIntoBlast_Sound_1.wav \
	InfluExplosion.wav \
	LeaveElevator_Sound_0.wav \
	Menu_Item_Selected_Sound_0.wav \
	MoveElevator_Sound_0.wav \
	Move_Menu_Position_Sound_0.wav \
	Paradroid.ogg \
	Refresh_Sound_0.wav \
	Screenshot.wav \
	Takeover_Game_Deadlock_Sound_0.wav \
	Takeover_Game_Lost_Sound_0.wav \
	Takeover_Game_Start_Sound_0.wav \
	Takeover_Game_Won_Sound_0.wav \
	TakeoverSetCapsule_Sound_0.wav \
	Takeover_Sound_0.wav \
	ThouArtDefeated_Sound_0.wav \
	WhiteNoise.wav

sound_DATA = $(music) $(sounds)

EXTRA_DIST = $(sound_DATA)
