SUBDIRS = ammo_exterminator_sphere ammo_laser_crystal ammo_plasma_bullet antigrav_unit antimatter_matter_converter basic_armour buckler desk_lamp dixons_toolbox emp_grenade energy_capsule entropy_inverter green_armour hacker_wristband large_shield laser_sword_green laser_sword_red laser_sword_yellow monkey_wrench plasma_double plasma_grenade plasma_single plasma_transistor plasma_triple small_shield sniper_wristband standard_shield superconducting_relay_unit tachyon_converter track_drive vmx_grenade warrior_wristband red_dilitium_crystal map_maker pill_dexterity pill_magic pill_strength brain_enlargement_antidode eating_plate eating_fork drinking_mug spellbook
